+ fix generated structs
